add: basic quickquery menu